--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,22 @@
 {
-    "compilerOptions": {
-      "target": "es5",
-      "module": "commonjs",
-      "outDir": "./dist",
-      "strict": true,
-      "lib": ["es6", "es2017"],
-      "moduleResolution": "node",
-      "paths": {
-        "@core/*": ["../../core/*"],
-        "@config/*": ["./src/config/*"],
-        "@models/*": ["./src/models/*"],
-        "@controllers/*": ["./src/controllers/*"]
-      },
-      "baseUrl": "./",
-      "esModuleInterop": true,
-      "forceConsistentCasingInFileNames": true,
-      "resolveJsonModule": true
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "outDir": "./build",
+    "strict": true,
+    "lib": [
+      "es6",
+      "es2017"
+    ],
+    "moduleResolution": "node",
+    "baseUrl": "src",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true
+  },
+  "references": [
+    {
+      "path": "../../../core"
     }
-  }
+  ],
+}
