--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "outDir": "./build",
+    "outDir": "./dist",
     "strict": true,
     "lib": [
       "es6",
@@ -14,9 +14,8 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true
   },
-  "references": [
-    {
-      "path": "../../../core"
-    }
-  ],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.json"
+  ]
 }
